--- a/contact.html
+++ b/contact.html
@@ -83,15 +83,13 @@
       <div class="container">
 
         <div class="block">
-          <div class="row justify-content-center">
+          <div class="row justify-content-between">
 
 
-            <div class="col-md-8 col-lg-8 pb-4">
-
-
-             
-
+            <div class="col-lg-6">
               <form>
+				<h2 class="section-title">Contact Our Team</h2>
+			
                 <div class="row">
                   <div class="col-6">
                     <div class="form-group">
@@ -114,7 +112,7 @@
                 <div class="form-group mb-5">
                   <label class="text-black" for="message">Message</label>
                   <textarea name="" class="form-control" id="message" cols="30" rows="5"></textarea>
-                </div>
+                </div>		
 
                 <button type="submit" class="btn btn-primary-hover-outline">Send Message</button>
               </form>
