--- a/index.html
+++ b/index.html
@@ -29,20 +29,19 @@
 </head>
 
 <body>
-
 	<!-- Start Header/Navigation -->
-	<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
+	<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark sticky-lg-top bg-primary" arial-label="Furni navigation bar">
 
 		<div class="container">
-			<a class="navbar-brand" href="index.html">XEngineer<span>.</span></a>
+			<a class="navbar-brand" href="index.html">Khoa</a>
 
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni"
 				aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
+				<span class="navbar-toggler-icon " style="background-color:red !important"></span>
 			</button>
 
 			<div class="collapse navbar-collapse" id="navbarsFurni">
-				<ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
+				<ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0 p-2">
 					<li class="nav-item active">
 						<a class="nav-link" href="index.html">HOME</a>
 					</li>
@@ -50,123 +49,42 @@
 					<li><a class="nav-link" href="services.html">Services</a></li>
 					<li><a class="nav-link" href="contact.html">Contact us</a></li>
 				</ul>
-
-				<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-					<li><a class="nav-link" href="#"><img src="images/user.svg"></a></li>
-					<li><a class="nav-link" href="cart.html"><img src="images/cart.svg"></a></li>
-				</ul>
 			</div>
 		</div>
-
 	</nav>
 	<!-- End Header/Navigation -->
 
 	<!-- Start Hero Section -->
-	<div class="hero">
-
-		<div class="container">
-			<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-interval="2500">
+	<div class="w-100 h-50">
+		<div class="position-relative">
+			<div id="carouselExampleSlidesOnly" class="carousel slide opacity-50 h-100" data-bs-ride="carousel" data-interval="2500">
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./images/test.jpg" class="d-block w-100 h-50" alt="...">
+						<img src="./images/carousel-1.jpg" class="d-block w-100 h-50 img-fluid w-100" alt="...">
 					</div>
 					<div class="carousel-item">
-						<img src="./images/couch.png" class="d-block w-100 h-50" alt="...">
+						<img src="./images/carousel-2.jpg" class="d-block w-100 h-50 img-fluid w-100" alt="...">
 					</div>
 					<div class="carousel-item">
-						<img src="./images/sofa.png" class="d-block w-100 h-50" alt="...">
+						<img src="./images/carousel-3.jpg" class="d-block w-100 h-50 img-fluid w-100" alt="...">
 					</div>
 				</div>
 			</div>
-			<div class="row justify-content-between">
-				<div class="col-lg-5">
-					<div class="intro-excerpt">
-						<h1>MEP Design <span clsas="d-block"></span></h1>
-						<p class="mb-4">We are a dynamic team of engineers passionate about creating smarter, greener
-							buildings through innovative Mechanical, Electrical, and Plumbing systems. Whether you are
-							planning a startup office or a warm cozy home, we are here to power your vision with
-							next-generation MEP design that's as bold as it is efficient..</p>
-						<p><a href="" class="btn btn-secondary me-2">Shop Now</a><a href="#"
-								class="btn btn-white-outline">Explore</a></p>
-					</div>
-				</div>
-				<div class="col-lg-7">
-					<div class="hero-img-wrap">
-						<img src="images/couch.png" class="img-fluid">
-					</div>
-				</div>
+			<div class="position-absolute top-50 start-50 translate-middle d-flex flex-column align-items-center justify-content-center text-white">
+				<h1>Khoa</h1>
+				<p>This is some description</p>
+				<button class = "btn btn-primary">Contact Us</button>
 			</div>
 		</div>
 	</div>
 	<!-- End Hero Section -->
-
-	<!-- Start Product Section -->
-	<div class="product-section">
-		<div class="container">
-			<div class="row">
-
-				<!-- Start Column 1 -->
-				<div class="col-md-12 col-lg-3 mb-5 mb-lg-0">
-					<h2 class="mb-4 section-title">Crafted with excellent material.</h2>
-					<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam
-						vulputate velit imperdiet dolor tempor tristique. </p>
-					<p><a href="shop.html" class="btn">Explore</a></p>
-				</div>
-				<!-- End Column 1 -->
-
-				<!-- Start Column 2 -->
-				<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-					<a class="product-item" href="cart.html">
-						<img src="images/product-1.png" class="img-fluid product-thumbnail">
-						<h3 class="product-title">Nordic Chair</h3>
-						<strong class="product-price">$50.00</strong>
-
-						<span class="icon-cross">
-							<img src="images/cross.svg" class="img-fluid">
-						</span>
-					</a>
-				</div>
-				<!-- End Column 2 -->
-
-				<!-- Start Column 3 -->
-				<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-					<a class="product-item" href="cart.html">
-						<img src="images/product-2.png" class="img-fluid product-thumbnail">
-						<h3 class="product-title">Kruzo Aero Chair</h3>
-						<strong class="product-price">$78.00</strong>
-
-						<span class="icon-cross">
-							<img src="images/cross.svg" class="img-fluid">
-						</span>
-					</a>
-				</div>
-				<!-- End Column 3 -->
-
-				<!-- Start Column 4 -->
-				<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-					<a class="product-item" href="cart.html">
-						<img src="images/product-3.png" class="img-fluid product-thumbnail">
-						<h3 class="product-title">Ergonomic Chair</h3>
-						<strong class="product-price">$43.00</strong>
-
-						<span class="icon-cross">
-							<img src="images/cross.svg" class="img-fluid">
-						</span>
-					</a>
-				</div>
-				<!-- End Column 4 -->
-
-			</div>
-		</div>
-	</div>
-	<!-- End Product Section -->
 
 	<!-- Start Why Choose Us Section -->
 	<div class="why-choose-section">
 		<div class="container">
 			<div class="row justify-content-between">
 				<div class="col-lg-6">
-					<h2 class="section-title">Why Choose Us</h2>
+					<h2 class="section-title">Who we are</h2>
 					<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit
 						imperdiet dolor tempor tristique.</p>
 
@@ -223,41 +141,14 @@
 						<img src="images/why-choose-us-img.jpg" alt="Image" class="img-fluid">
 					</div>
 				</div>
-
 			</div>
 		</div>
 	</div>
 	<!-- End Why Choose Us Section -->
 
-	<!-- Start We Help Section -->
-	<div class="we-help-section">
-		<div class="container">
-			<div class="row justify-content-between">
-				<div class="col-lg-7 mb-5 mb-lg-0">
-					<div class="imgs-grid">
-						<div class="grid grid-1"><img src="images/img-grid-1.jpg" alt="Untree.co"></div>
-						<div class="grid grid-2"><img src="images/img-grid-2.jpg" alt="Untree.co"></div>
-						<div class="grid grid-3"><img src="images/img-grid-3.jpg" alt="Untree.co"></div>
-					</div>
-				</div>
-				<div class="col-lg-5 ps-lg-5">
-					<h2 class="section-title mb-4">We Help You Make Modern Interior Design</h2>
-					<p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada.
-						Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque
-						habitant morbi tristique senectus et netus et malesuada</p>
+	
 
-					<ul class="list-unstyled custom-list my-4">
-						<li>Donec vitae odio quis nisl dapibus malesuada</li>
-						<li>Donec vitae odio quis nisl dapibus malesuada</li>
-						<li>Donec vitae odio quis nisl dapibus malesuada</li>
-						<li>Donec vitae odio quis nisl dapibus malesuada</li>
-					</ul>
-					<p><a herf="#" class="btn">Explore</a></p>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- End We Help Section -->
+
 
 	<!-- Start Popular Product -->
 	<!--
@@ -309,119 +200,6 @@
 		</div>
 -->
 	<!-- End Popular Product -->
-
-	<!-- Start Testimonial Slider -->
-	<div class="testimonial-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-7 mx-auto text-center">
-					<h2 class="section-title">Testimonials</h2>
-				</div>
-			</div>
-
-			<div class="row justify-content-center">
-				<div class="col-lg-12">
-					<div class="testimonial-slider-wrap text-center">
-
-						<div id="testimonial-nav">
-							<span class="prev" data-controls="prev"><span class="fa fa-chevron-left"></span></span>
-							<span class="next" data-controls="next"><span class="fa fa-chevron-right"></span></span>
-						</div>
-
-						<div class="testimonial-slider">
-
-							<div class="item">
-								<div class="row justify-content-center">
-									<div class="col-lg-8 mx-auto">
-
-										<div class="testimonial-block text-center">
-											<blockquote class="mb-5">
-												<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae
-													odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam
-													vulputate velit imperdiet dolor tempor tristique. Pellentesque
-													habitant morbi tristique senectus et netus et malesuada fames ac
-													turpis egestas. Integer convallis volutpat dui quis
-													scelerisque.&rdquo;</p>
-											</blockquote>
-
-											<div class="author-info">
-												<div class="author-pic">
-													<img src="images/person-1.png" alt="Maria Jones" class="img-fluid">
-												</div>
-												<h3 class="font-weight-bold">Maria Jones</h3>
-												<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
-											</div>
-										</div>
-
-									</div>
-								</div>
-							</div>
-							<!-- END item -->
-
-							<div class="item">
-								<div class="row justify-content-center">
-									<div class="col-lg-8 mx-auto">
-
-										<div class="testimonial-block text-center">
-											<blockquote class="mb-5">
-												<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae
-													odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam
-													vulputate velit imperdiet dolor tempor tristique. Pellentesque
-													habitant morbi tristique senectus et netus et malesuada fames ac
-													turpis egestas. Integer convallis volutpat dui quis
-													scelerisque.&rdquo;</p>
-											</blockquote>
-
-											<div class="author-info">
-												<div class="author-pic">
-													<img src="images/person-1.png" alt="Maria Jones" class="img-fluid">
-												</div>
-												<h3 class="font-weight-bold">Maria Jones</h3>
-												<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
-											</div>
-										</div>
-
-									</div>
-								</div>
-							</div>
-							<!-- END item -->
-
-							<div class="item">
-								<div class="row justify-content-center">
-									<div class="col-lg-8 mx-auto">
-
-										<div class="testimonial-block text-center">
-											<blockquote class="mb-5">
-												<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae
-													odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam
-													vulputate velit imperdiet dolor tempor tristique. Pellentesque
-													habitant morbi tristique senectus et netus et malesuada fames ac
-													turpis egestas. Integer convallis volutpat dui quis
-													scelerisque.&rdquo;</p>
-											</blockquote>
-
-											<div class="author-info">
-												<div class="author-pic">
-													<img src="images/person-1.png" alt="Maria Jones" class="img-fluid">
-												</div>
-												<h3 class="font-weight-bold">Maria Jones</h3>
-												<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
-											</div>
-										</div>
-
-									</div>
-								</div>
-							</div>
-							<!-- END item -->
-
-						</div>
-
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- End Testimonial Slider -->
 
 	<!--
 		 Start Blog Section 
@@ -483,38 +261,9 @@
 	<!-- Start Footer Section -->
 	<footer class="footer-section">
 		<div class="container relative">
-
-			<div class="sofa-img">
-				<img src="images/sofa.png" alt="Image" class="img-fluid">
-			</div>
-
-			<div class="row">
-				<div class="col-lg-8">
-					<div class="subscription-form">
-						<h3 class="d-flex align-items-center"><span class="me-1"><img src="images/envelope-outline.svg"
-									alt="Image" class="img-fluid"></span><span>Subscribe to Newsletter</span></h3>
-
-						<form action="#" class="row g-3">
-							<div class="col-auto">
-								<input type="text" class="form-control" placeholder="Enter your name">
-							</div>
-							<div class="col-auto">
-								<input type="email" class="form-control" placeholder="Enter your email">
-							</div>
-							<div class="col-auto">
-								<button class="btn btn-primary">
-									<span class="fa fa-paper-plane"></span>
-								</button>
-							</div>
-						</form>
-
-					</div>
-				</div>
-			</div>
-
 			<div class="row g-5 mb-5">
 				<div class="col-lg-4">
-					<div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">XEngineer<span>.</span></a></div>
+					<div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">Khoa</a></div>
 
 					<div class="col-lg-4">
 						<div class="service no-shadow align-items-center link horizontal d-flex active"
