--- a/about.html
+++ b/about.html
@@ -80,8 +80,9 @@
           <div class="col-lg-6">
             <h2 class="section-title">Why Choose Us</h2>
             <p>
-              Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet
-              velit. Aliquam vulputate velit imperdiet dolor tempor tristique.
+              We deliver innovative MEP solutions with a focus on safety, efficiency, and sustainability. 
+              With our expert team, personalized service, and commitment to quality, we ensure every project meets your highest standards. 
+              Choose us for reliable, on-time, and cost-effective results.
             </p>
 
             <div class="row my-5">
@@ -378,7 +379,7 @@
                 <ul class="list-unstyled">
                   <li><a class="text-white" href="#">About us</a></li>
                   <li><a class="text-white" href="#">Services</a></li>
-                  <li><a class="text-white" href="#">Blog</a></li>
+             
                   <li><a class="text-white" href="#">Contact us</a></li>
                 </ul>
               </div>
