--- a/contact.html
+++ b/contact.html
@@ -58,6 +58,15 @@
 
 		
 		<!-- Start Contact Form -->
+		<div class="container my-5">
+			<div class="contact-section">
+				<div class="contact-info">
+					<h2 class="section-title">Let's Build Something Great Together</h2>
+					<p>
+						How can we help? Please fill out your inquiry and our team will get in touch with you shortly!
+					</p>
+	
+
 		<div class="untree_co-section">
       <div class="container">
 
@@ -67,7 +76,7 @@
 
             <div class="bg-light p-4 rounded-3">
               <form>
-				<h2 class="section-title">Let's Get in Touch</h2>
+				<h2 class="section-title">Contact Our Team</h2>
 			
                 <div class="row">
                   <div class="col-6">
@@ -89,7 +98,7 @@
                 </div>
 
                 <div class="form-group mb-5">
-                  <label class="text-black" for="message">Message</label>
+                  <label class="text-black" for="message">Message*</label>
                   <textarea name="" class="form-control" id="message" cols="30" rows="5"></textarea>
                 </div>		
 
@@ -157,7 +166,7 @@
 			  <ul class="list-unstyled">
 				<li><a class="text-white" href="#">About us</a></li>
 				<li><a class="text-white" href="#">Services</a></li>
-				<li><a class="text-white" href="#">Blog</a></li>
+			
 				<li><a class="text-white" href="#">Contact us</a></li>
 			  </ul>
 			</div>
@@ -166,17 +175,26 @@
 			  <ul class="list-unstyled custom-social">
 				<li>
 				  <a href="#"
-					><span class="fa fa-brands fa-facebook-f" style="color:#02457a"></span
+					><span
+					  class="fa fa-brands fa-facebook-f"
+					  style="color: #02457a"
+					></span
 				  ></a>
 				</li>
 				<li>
 				  <a href="#"
-					><span class="fa fa-brands fa-instagram" style="color:#02457a"></span
+					><span
+					  class="fa fa-brands fa-instagram"
+					  style="color: #02457a"
+					></span
 				  ></a>
 				</li>
 				<li>
 				  <a href="#"
-					><span class="fa fa-brands fa-linkedin" style="color:#02457a"></span
+					><span
+					  class="fa fa-brands fa-linkedin"
+					  style="color: #02457a"
+					></span
 				  ></a>
 				</li>
 			  </ul>
@@ -199,7 +217,9 @@
 
 		  <div class="col-lg-6 text-center text-lg-end">
 			<ul class="list-unstyled d-inline-flex ms-auto">
-			  <li class="me-4"><a href="#" class="text-white">Terms &amp; Conditions</a></li>
+			  <li class="me-4">
+				<a href="#" class="text-white">Terms &amp; Conditions</a>
+			  </li>
 			  <li><a href="#" class="text-white">Privacy Policy</a></li>
 			</ul>
 		  </div>
