new code update 9/1/24 12pm

--- a/about.html
+++ b/about.html
@@ -78,84 +78,15 @@
       <div class="container">
         <div class="row justify-content-between align-items-center">
           <div class="col-lg-6">
-            <h2 class="section-title">Why Choose Us</h2>
+            <h2 class="section-title">Why Us</h2>
             <p>
               We deliver innovative MEP solutions with a focus on safety, efficiency, and sustainability. 
               With our expert team, personalized service, and commitment to quality, we ensure every project meets your highest standards. 
               Choose us for reliable, on-time, and cost-effective results.
             </p>
-
-            <div class="row my-5">
-              <div class="col-6 col-md-6">
-                <div class="feature">
-                  <div class="icon">
-                    <img src="images/truck.svg" alt="Image" class="imf-fluid" />
-                  </div>
-                  <h3>Fast &amp; Free Shipping</h3>
-                  <p>
-                    Donec vitae odio quis nisl dapibus malesuada. Nullam ac
-                    aliquet velit. Aliquam vulputate.
-                  </p>
-                </div>
-              </div>
-
-              <div class="col-6 col-md-6">
-                <div class="feature">
-                  <div class="icon">
-                    <img src="images/bag.svg" alt="Image" class="imf-fluid" />
-                  </div>
-                  <h3>Easy to Shop</h3>
-                  <p>
-                    Donec vitae odio quis nisl dapibus malesuada. Nullam ac
-                    aliquet velit. Aliquam vulputate.
-                  </p>
-                </div>
-              </div>
-
-              <div class="col-6 col-md-6">
-                <div class="feature">
-                  <div class="icon">
-                    <img
-                      src="images/support.svg"
-                      alt="Image"
-                      class="imf-fluid"
-                    />
-                  </div>
-                  <h3>24/7 Support</h3>
-                  <p>
-                    Donec vitae odio quis nisl dapibus malesuada. Nullam ac
-                    aliquet velit. Aliquam vulputate.
-                  </p>
-                </div>
-              </div>
-
-              <div class="col-6 col-md-6">
-                <div class="feature">
-                  <div class="icon">
-                    <img
-                      src="images/return.svg"
-                      alt="Image"
-                      class="imf-fluid"
-                    />
-                  </div>
-                  <h3>Hassle Free Returns</h3>
-                  <p>
-                    Donec vitae odio quis nisl dapibus malesuada. Nullam ac
-                    aliquet velit. Aliquam vulputate.
-                  </p>
-                </div>
-              </div>
-            </div>
           </div>
 
-          <div class="col-lg-5">
-            <div class="img-wrap">
-              <img
-                src="images/why-choose-us-img.jpg"
-                alt="Image"
-                class="img-fluid"
-              />
-            </div>
+        
           </div>
         </div>
       </div>
