--- a/contact.html
+++ b/contact.html
@@ -59,9 +59,9 @@
 		
 		<!-- Start Contact Form -->
 		<div class="container my-5">
-			<div class="contact-section">
+			<div class="contact-section text-center">
 				<div class="contact-info">
-					<h2 class="section-title">Let's Build Something Great Together</h2>
+					<h2 class="section-title fw-bold" >Let's Build Something Great Together</h2>
 					<p>
 						How can we help? Please fill out your inquiry and our team will get in touch with you shortly!
 					</p>
