--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         >
           <h1>Khoa</h1>
           <p>This is some description</p>
-          <button class="btn rounded-3">Contact Us</button>
+          <a href="contact.html" class="btn rounded-3">Contact Us</a>
         </div>
       </div>
     </div>
@@ -143,10 +143,10 @@
             <div class="row my-5">
               <div class="col-md-4">
                 <div class="feature">
-                  <button class="fw-bold btn rounded-3 p-2 w-100">
+                  <a href="services.html" class="fw-bold btn rounded-3 p-2 w-100 text-decoration-none d-flex align-items-center justify-content-center">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
-					  height="30px"
+                      height="30px"
                       width="30px"
                       fill="#000000"
                       class="bi bi-lightning"
@@ -156,14 +156,14 @@
                         d="M5.52.359A.5.5 0 0 1 6 0h4a.5.5 0 0 1 .474.658L8.694 6H12.5a.5.5 0 0 1 .395.807l-7 9a.5.5 0 0 1-.873-.454L6.823 9.5H3.5a.5.5 0 0 1-.48-.641zM6.374 1 4.168 8.5H7.5a.5.5 0 0 1 .478.647L6.78 13.04 11.478 7H8a.5.5 0 0 1-.474-.658L9.306 1z"
                       />
                     </svg>
-                    <span class="fs-4">Electrical</span>
-                  </button>
+                    <span class="fs-4 ms-2">Electrical</span>
+                  </a>
                 </div>
               </div>
 
               <div class="col-md-4">
                 <div class="feature">
-                  <button class="fw-bold btn rounded-3 p-2 w-100">
+                  <a href="services.html" class="fw-bold btn rounded-3 p-2 w-100">
                     <svg
                       fill="#000000"
                       height="30px"
@@ -187,13 +187,13 @@
                       </g>
                     </svg>
                     <span class="fs-4"> Mechanical</span>
-                  </button>
+                  </a>
                 </div>
               </div>
 
               <div class="col-md-4">
                 <div class="feature">
-                  <button class="fw-bold btn rounded-3 p-2 w-100">
+                  <a href="services.html" class="fw-bold btn rounded-3 p-2 w-100">
                     <svg
                       fill="#000000"
                       height="35px"
@@ -236,7 +236,7 @@
                       </g>
                     </svg>
                     <span class="fs-4"> Plumbing</span>
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
