new code 11pm 9/1/24

--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
       arial-label="Furni navigation bar"
     >
       <div class="container">
-        <a class="navbar-brand" href="index.html">Khoa</a>
+        <a class="navbar-brand" href="index.html">KONCEPT</a>
 
         <button
           class="navbar-toggler"
@@ -269,7 +269,7 @@
         <div class="row g-5 mb-5">
           <div class="col-lg-4">
             <div class="mb-4 footer-logo-wrap">
-              <a href="#" class="footer-logo">Khoa</a>
+              <a href="#" class="footer-logo">KONCEPT</a>
             </div>
 
             <div class="col-lg-12">
@@ -308,10 +308,10 @@
             <div class="row links-wrap">
               <div class="col-6 col-sm-6 col-md-3">
                 <ul class="list-unstyled">
-                  <li><a class="text-white" href="#">About us</a></li>
-                  <li><a class="text-white" href="#">Services</a></li>
+                  <li><a class="text-white" href="about.html">About us</a></li>
+                  <li><a class="text-white" href="services.html">Services</a></li>
              
-                  <li><a class="text-white" href="#">Contact us</a></li>
+                  <li><a class="text-white" href="contact.html">Contact us</a></li>
                 </ul>
               </div>
 
