--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       arial-label="Furni navigation bar"
     >
       <div class="container">
-        <a class="navbar-brand" href="index.html">Khoa</a>
+        <a class="navbar-brand" href="index.html">KONCEPT</a>
 
         <button
           class="navbar-toggler"
@@ -118,8 +118,8 @@
         <div
           class="position-absolute top-50 start-50 translate-middle d-flex flex-column align-items-center justify-content-center text-white"
         >
-          <h1>Khoa</h1>
-          <p>This is some description</p>
+          <h1>KONCEPT</h1>
+          <p>CONCEPT TO REALITY</p>
           <a href="contact.html" class="btn rounded-3">Contact Us</a>
         </div>
       </div>
@@ -245,7 +245,7 @@
           <div class="col-lg-5">
             <div class="img-wrap">
               <img
-                src="images/why-choose-us-img.jpg"
+                src="images/test2.jpg"
                 alt="Image"
                 class="img-fluid"
               />
@@ -262,7 +262,7 @@
         <div class="row g-5 mb-5">
           <div class="col-lg-4">
             <div class="mb-4 footer-logo-wrap">
-              <a href="#" class="footer-logo">Khoa</a>
+              <a href="#" class="footer-logo">KONCEPT</a>
             </div>
 
             <div class="col-lg-12">
@@ -301,9 +301,9 @@
             <div class="row links-wrap">
               <div class="col-6 col-sm-6 col-md-3">
                 <ul class="list-unstyled">
-                  <li><a class="text-white" href="#">About us</a></li>
-                  <li><a class="text-white" href="#">Services</a></li>
-                  <li><a class="text-white" href="#">Contact us</a></li>
+                  <li><a class="text-white" href="about.html">About us</a></li>
+                  <li><a class="text-white" href="services.html">Services</a></li>
+                  <li><a class="text-white" href="contact.html">Contact us</a></li>
                 </ul>
               </div>
 
