--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
     <div class="section_0"></div>
     <div class="section_1">
       <div class="section_1_textbox">
-        <h1>Services</h1>
+        <h1>About Us</h1>
       </div>
     </div>
     <div class="why-choose-section">
