--- a/services.html
+++ b/services.html
@@ -83,17 +83,38 @@
       <section class="services-section">
           <div class="services-container">
               <div class="service-card">
-                  <h3>Mechanical</h3>
-                  <p>Our mechanical services cover a wide range of solutions, including HVAC systems, equipment installation, and preventive maintenance. We ensure optimal performance and energy efficiency for all your mechanical needs.</p>
+                  <h3 class ="text-align: center">Mechanical</h3>
+                  <img src="images/home.jpg" class="img-fluid mb-5">
+                  <ul class="text-align: left;
+                  padding-left: 20px;">
+                    <li>HVAC systems installation and maintenance</li>
+                    <li>Equipment installation</li>
+                    <li>Preventive maintenance</li>
+                    <li>Energy efficiency optimization</li>
+                  </ul>
               </div>
               <div class="service-card">
                   <h3>Electrical</h3>
-                  <p>From wiring and installations to repairs and upgrades, our electrical services are designed to keep your property safe and powered. We handle both residential and commercial electrical projects with expertise.</p>
+                  <img src="images/home.jpg" class="img-fluid mb-5">
+                  <ul class="text-align: left;
+                  padding-left: 20px;">
+                    <li>Wiring and installations</li>
+                    <li>Repairs and upgrades</li>
+                    <li>Residential and commercial projects</li>
+                    <li>Safety inspections</li>
+                  </ul>
+
               </div>
               <div class="service-card">
                   <h3>Plumbing</h3>
-                  <p>Our comprehensive plumbing services include installation, repair, and maintenance of pipes, fixtures, and water systems. We ensure efficient water flow and address any plumbing issues promptly and professionally.</p>
-              </div>
+                  <img src="images/home.jpg" class="img-fluid mb-5">
+                  <ul class="text-align: left;
+                  padding-left: 20px;">
+                    <li>Pipe installation and repair</li>
+                    <li>Fixture installation and maintenance</li>
+                    <li>Water system services</li>
+                    <li>Emergency plumbing repairs</li>
+                  </ul>              </div>
           </div>
       </section>
   </body>
