--- a/contact.html
+++ b/contact.html
@@ -80,33 +80,33 @@
 			<div class="block">
 				<div class="d-flex flex-row justify-content-center align-content-center">
 
-
+					
 					<div class="bg-light p-4 rounded-3">
-						<form>
+						<form action ="https://formspree.io/f/xovabeoe" method="POST">
 							<h2 class="section-title">Contact Our Team</h2>
 
 							<div class="row">
 								<div class="col-6">
 									<div class="form-group">
-										<label class="text-black" for="fname">Your Name*</label>
-										<input type="text" class="form-control" id="fname">
+										<label class="text-black" for="fname">First Name*</label>
+										<input type="text" class="form-control" id="fname" name="First Name" required>
 									</div>
 								</div>
 								<div class="col-6">
 									<div class="form-group">
-										<label class="text-black" for="lname">Phone Number</label>
-										<input type="text" class="form-control" id="lname">
+										<label class="text-black" for="lname">Last Name*</label>
+										<input type="text" class="form-control" id="lname" name="Last Name" required>
 									</div>
 								</div>
 							</div>
 							<div class="form-group">
 								<label class="text-black" for="email">Email Address*</label>
-								<input type="email" class="form-control" id="email">
+								<input type="email" class="form-control" id="email" name="email" required>
 							</div>
 
 							<div class="form-group mb-5">
 								<label class="text-black" for="message">Message*</label>
-								<textarea name="" class="form-control" id="message" cols="30" rows="5"></textarea>
+								<textarea class="form-control" id="message" cols="30" rows="5" name="message" required></textarea>
 							</div>
 
 							<button type="submit" class="btn btn-secondary">Send Message</button>
