--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
           <div class="col-lg-5">
             <div class="img-wrap">
               <img
-                src="images/test2.jpg"
+                src="images/home.jpg"
                 alt="Image"
                 class="img-fluid"
               />
