90% design 9/4/24 at 11:07pm

--- a/services.html
+++ b/services.html
@@ -28,8 +28,7 @@
     <link href="css/tiny-slider.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
     <title>
-      Furni Free Bootstrap 5 Template for Furniture and Interior Design Websites
-      by Untree.co
+      Koncept Engineering
     </title>
   </head>
 
@@ -361,6 +360,17 @@
       </div>
     </footer>
     <!-- End Footer Section -->
+
+    <!-- Scroll up top button -->
+    <button onclick="topFunction()" id="myBtn" title="Go to top">
+      <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+        <g id="SVGRepo_iconCarrier">
+          <path d="M16 14L12 10L8 14" stroke="#FFFFFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+        </g>
+      </svg>
+    </button>
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/tiny-slider.js"></script>
