--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
     <title>
-      Furni Free Bootstrap 5 Template for Furniture and Interior Design Websites
-      by Untree.co
+      Koncept Engineering
     </title>
   </head>
 
@@ -119,7 +118,7 @@
         <div
           class="position-absolute top-50 start-50 translate-middle d-flex flex-column align-items-center justify-content-center text-white"
         >
-          <h1 class="text-black "> CONCEPT TO REALITY </h1>
+          <h1 class="text-black" style="text-align: cetner;"> CONCEPT TO REALITY </h1>
          
           <a href="contact.html" class="btn rounded-3">Contact Us</a>
         </div>
@@ -132,7 +131,7 @@
       <div class="container">
         <div class="row justify-content-between">
           <div class="col-lg-6">
-            <h2 class="section-title fw-bolder text-primary">Who we are</h2>
+            <h2 class="section-title fw-bolder text-primary ">Who We Are</h2>
             <p class="h5">
               With over a decade of industry experience, we deliver expert
               electrical, mechanical, plumbing, and lighting design solutions.
@@ -354,9 +353,20 @@
       </div>
     </footer>
     <!-- End Footer Section -->
+     
+    <!-- Scroll up top button -->
+    <button onclick="topFunction()" id="myBtn" title="Go to top">
+      <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+        <g id="SVGRepo_iconCarrier">
+          <path d="M16 14L12 10L8 14" stroke="#FFFFFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+        </g>
+      </svg>
+    </button>
 
-    <!--		<script src="js/bootstrap.bundle.min.js"></script>
--->
+
+   
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"
       integrity="sha512-pax4MlgXjHEPfCwcJLQhigY7+N8rt6bVvWLFyUMuxShv170X53TRzGPmPkZmGBhk+jikR8WBM4yl7A9WMHHqvg=="
