staggered text animation 9/9/24

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </div>
           </div>
         </div>
-        <div class="hero-content">
+        <div class="hero-content w-100 position-absolute top-50 d-flex flex-column justify-content-center align-items-center">
           <h1 id="animatedText">
               <span class="animate-text">C</span>
               <span class="animate-text">O</span>
@@ -135,7 +135,7 @@
               <span class="animate-text">T</span>
               <span class="animate-text">Y</span>
           </h1>
-          <a href="contact.html" class="btn rounded-3" id="contactButton">Contact Us</a>
+          <a href="contact.html" class="btn rounded-3" style="width: 10rem;"   id="contactButton">Contact Us</a>
         </div>
       </div>
     </div> 
@@ -167,7 +167,7 @@
         <div class="row justify-content-between">
           <div class="col-lg-6">
             <h2 class="section-title fw-bolder text-primary ">Who We Are</h2>
-            <p class="h5">
+            <p class="h5 text-center">
               With over a decade of industry experience, we deliver expert
               electrical, mechanical, plumbing, and lighting design solutions.
               Our foundation rests on unwavering integrity, paramount safety,
